--- a/css/index.css
+++ b/css/index.css
@@ -1,813 +1,29 @@
-
-#main-container a{
+body a{
   text-decoration: none;
+  list-style-type: none;
 }
-
-
-
-.wc-brandmark-icon {
-  position: absolute;
-  top: 7px;
-  right: -61px;
-  width: 1000px;
-  height: 1056.82px;
-  overflow: hidden;
+body li{
+  list-style-type: none;
 }
-.get-started-with {
-  position: relative;
-  letter-spacing: -0.01em;
-  line-height: 68px;
-  display: inline-block;
-  width: 605px;
-}
-.field,
-.frame-wrapper,
-.get-started-with-a-great-domai-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.field,
-.frame-wrapper {
-  padding: var(--padding-9xs);
-  font-size: 64px;
-  font-family: var(--font-helvetica);
-}
-.field {
-  border: 0;
-  font-family: var(--font-helvetica-neue);
-  font-size: 24px;
-  background-color: var(--shades-white);
-  border-radius: var(--br-5xs) 0 0 var(--br-5xs);
-  width: 438px;
-  flex-shrink: 0;
-  overflow: hidden;
-  flex-direction: row;
-  padding: var(--padding-5xl) 20px;
-  box-sizing: border-box;
-  align-items: center;
-}
-.search {
-  position: relative;
-}
-.button1 {
-  border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
-  background-color: var(--brand-primary-deep-blue);
-  width: 175px;
-  height: 80px;
-  font-size: 24px;
-  line-height: 24px;
-  flex-shrink: 0;
-  overflow: hidden;
-  flex-direction: row;
-  padding: var(--padding-5xl) 16px;
-  box-sizing: border-box;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  cursor: pointer;
-  transition: 0.3s;
-  position: relative;
-  display: block;
-  color: white;
-}
-img.icon-magnify {
-    padding-left: 10px;
-}
-
-@keyframes button-anim {
-  from {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.button1.loading {
-  color: transparent;
-}
-
-.button1 .loading::after {
-  opacity: 1;
-}
-
-.button1::after {
-  content: '';
-  display: block;
-  width: 1.2em;
-  height: 1.2em;
-  position: absolute;
-  left: calc(50% - 0.75em);
-  top: calc(50% - 0.75em);
-  border: 0.15em solid transparent;
-  border-right-color: white;
-  border-radius: 50%;
-  animation: button-anim 0.7s linear infinite;
-  opacity: 0;
-}
-.button1.loading::after {
-  opacity: 1;
-}
-.domain-registrations-from-wrapper,
-.form1 {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.form1 {
-  box-shadow: 0 12px 40px rgba(0, 0, 0, 0.1);
-  color: var(--shades-white);
-  background-color: #fff;
-  border-radius: 10px;
-  align-items: center;
-}
-.domain-registrations-from-wrapper {
-  padding: var(--padding-9xs);
-}
-img.icon-magnify {
-  padding-left: 10px;
-}
-.div1 {
-  position: relative;
-  text-decoration: line-through;
-  display: flex;
-  align-items: center;
-  width: 49px;
-  height: 25px;
-  flex-shrink: 0;
-}
-.yr1 {
-  font-weight: 300;
-}
-.yr1 {
-  position: relative;
-  font-size: var(--font-size-xl);
-  color: var(--brand-primary-deep-blue);
-}
-.parent1 {
-  border-radius: var(--br-5xs);
-  background-color: rgba(191, 222, 240, 0.5);
-  flex-direction: row;
-  padding: 12px;
-  align-items: center;
-  gap: 10px;
-  font-size: var(--font-size-base);
-  color: rgba(18, 44, 75, 0.5);
-}
-.frame-group,
-.frame-parent,
-.parent1 {
-  display: flex;
-  justify-content: flex-start;
-}
-.frame-group {
-  flex-direction: row;
-  align-items: center;
-  gap: var(--gap-9xs);
-}
-.frame-parent {
-  position: absolute;
-  top: 314px;
-  left: 162px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 40px;
-}
-input.field {
-  outline: transparent;
-}
-.domains {
-  position: relative;
-  font-weight: 500;
-}
-.icon-arrow-dropdown {
-  position: relative;
-  width: 24px;
-  height: 24px;
-  flex-shrink: 0;
-  overflow: hidden;
-}
-.link {
-  gap: var(--gap-9xs);
-}
-.link,
-.link5 {
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-5xs);
-  align-items: center;
-  justify-content: center;
-}
-.frame-child,
-.menu-child {
-  position: relative;
-  flex-shrink: 0;
-}
-.menu-child {
-  border-radius: var(--br-5xs);
-  background-color: var(--brand-primary-sky-blue);
-  width: 1px;
-  height: 28px;
-}
-.frame-child {
-  width: 40px;
-  height: 40px;
-}
-.frame-container {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 12px;
-}
-.logo-webcentral,
-.menu {
-  position: absolute;
-  overflow: hidden;
-}
-.menu {
-  top: 105px;
-right: 60px;
-  display: flex;
-  flex-direction: row;
-  padding: 1px 0;
-  align-items: center;
-  justify-content: flex-start;
-  gap: var(--gap-base);
-}
-.logo-webcentral {
-  top: 45px;
-  left: 64px;
-  width: 333.01px;
-  height: 90px;
-}
-.icon-phone,
-.quick-menu-child {
-  position: relative;
-  flex-shrink: 0;
-}
-.icon-phone {
-  width: 20px;
-  height: 20px;
-  overflow: hidden;
-}
-.quick-menu-child {
-  border-radius: var(--br-5xs);
-  background-color: var(--brand-primary-sky-blue);
-  width: 1px;
-  height: 24px;
-}
-.quick-menu {
-  position: absolute;
-  top: 45px;
-right: 70px;
-  border-radius: var(--br-5xs);
-  background-color: rgba(191, 222, 240, 0.35);
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-9xs) var(--padding-5xs);
-  align-items: center;
-  justify-content: center;
-  gap: var(--gap-base);
-  font-size: var(--font-size-sm);
-}
-
 .header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(16px);
-  width: 1920px;
-  height: 180px;
-  font-size: var(--font-size-base);
-}
-.hero {
-  position: relative;
-  background-color: #eef2f5;
-  width: 1920px;
-  height: 900px;
-  flex-shrink: 0;
-  overflow: hidden;
-}
-.hero-parent {
-  position: relative;
+  display: flex;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  text-align: left;
-  font-size: var(--font-size-xl);
-  color: var(--brand-primary-deep-blue);
-  font-family: var(--font-helvetica-neue);
 }
-
-.establish-your-brand {
-text-align: center;
-
+.navbar {
+  width: 100%;
 }
-.establish-your-brand-online-parent {
-  width: 1920px;
-  background-color: #fff;
-  height: 289px;
-  overflow: hidden;
-  font-size: 64px;
-align-items: center;
-  display: grid;
-  color: var(--brand-primary-deep-blue);
-  font-family: var(--font-helvetica-neue);
-}
-
-
-b.websites {
-  font-size: 24px;
-  line-height: 24px;
-}
-b.get-more-than {
-
-  font-size: 50px;
-  width: 655px;
-  padding: 20px 0;
-}
-.easily-create-a-container {
-  width: 700px;
-  padding: 20px 0;
-}
-.brand-button {
-  width: auto;
-  padding: 15px 25px;
-  border: 2px solid #C4CAD2;
-  border-radius: 10px;
-  color: #122C4B;
-}
-.brand-button:hover {
-
-  background-color: #122C4B;
-  border: transparent;
-  color: #FFFFFF;
-}
-.Web-button {
-  display: flex;
-  gap: 10px;
-}
-
-/* Section-3 Css */
-
-.products {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: #fff;
-  width: 1920px;
-  height: 829px;
-  text-align: left;
-  font-size: var(--font-size-xl);
-  color: var(--brand-primary-deep-blue);
-  font-family: var(--font-helvetica-neue);
-}
-.content {
+ul.navbar-nav {
   display: flex;
   align-items: center;
-}
-
-.copy {
-  display: flex;
-  flex-direction: column;
-  width: 800px;
-  margin: 0 auto;
-
-}
-.products-item {
-  position: absolute;
-  height: 387px;
-  width: 285px;
-}
-
-section.fame-family {
-  background-color: #EEF2F5;
-  width: 1920px;
-}
-
-
-.fame-group {
-  background-color: #EEF2F5;
-}
-.protect {
-  display: flex;
-  padding: 0 100px;
-}
-.supported-family {
-  width: 1920px;
-  text-align: center;
-  align-items: center;
-  padding: 100px 0
-}
-b.sub-fame {
-font-family: Helvetica Neue;
-font-size: 64px;
-Line-height: 87%;
-color: #122C4B;
-}
-.they-all-got {
-font-family: Helvetica Neue;
-font-size: 20px;
-Line-height: 100%;
-color: #122C4B;
-margin-top: 25px;
-}
-.fame-div {
-  display: flex;
-  align-items: center;
-}
-.fiona-family {
-  display: flex;
-  flex-direction: column;
-  padding: 0px 160px;
-  width: 335px;
-  margin: 0 auto;
-}
-
-b.get-started {
-  font-size: 46px;
-  line-height: 56px;
-}
-.lush-plants {
-  font-size: 32px;
-  line-height: 38px;
-  margin: 20px 0;
-}
-.webcentral-has-enhanced {
-  font-size: 20px;
-  line-height: 30px;
-}
-.star-family {
-  margin-top: 15px;
-}
-img.fame-child {
-  width: 40px;
-}
-video {
-  border-radius: 25px;
-}
-.frama-parent {
-  display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 160px;
-    padding: 100px 200px;
-}
-.frama-group {
-  width: 400px;
-  text-align: center;
-}
-
-section.rectangle-parent {
-  background-color: #EEF2F5;
-  width: 1920px;
-}
-
-img.frama-inner {
-  width: 30px;
-  margin: 20px 0;
-}
-
-b.katherine {
-  font-size: 33px;
-line-height: 34px;
-margin-left: 5px;
-color:#122C4B;
-}
-.hair-makeup {
-  font-size: 24px;
-  line-height: 24px;
-  margin: 10px 0;
-}
-.button5 {
-  width: 150px;
-  margin: 0 auto;
-  padding: 15px;
-  border: 2px solid rgba(18, 44, 75, 0.25);
-  border-radius: 10px;
-}
-
-/* Section-6 */
-
-section.fill-parent {
-  width: 1920px;
-  height: 640px;
-  display: flex;
-    align-items: center;
-  background-image: url(/public/Frame-72.svg);
-}
-
-.find-container {
-  font-size: 64px;
-  line-height: 68px;
-  color: #FFFFFF;
-}
-.form6 {
-  box-shadow: 0px 12px 40px rgba(0, 0, 0, 0.25);
-  display: flex;
-  width: 815px;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  font-size: 24px;
-  margin: 30px auto;
-  color: rgba(18, 44, 75, 0.5);
-}
-.field6 {
-  border-radius: var(--br-5xs) 0px 0px var(--br-5xs);
-  background-color: var(--shades-white);
-  width: 640px;
-  flex-shrink: 0;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  box-sizing: border-box;
-  align-items: center;
-  justify-content: flex-start;
-}
-/* .button6 {
-  border-radius: 0px var(--br-5xs) var(--br-5xs) 0px;
-  background-color: #0AA872;
-  width: 175px;
-  height: 80px;
-  flex-shrink: 0;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-5xl) 16px;
-  box-sizing: border-box;
-  align-items: center;
-  justify-content: center;
-  font-size: var(--font-size-xl);
-  color: var(--shades-white);
-} */
-.farmsi-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 10px;
-  width: 440px;
-    margin: 0 auto;
-}
-.domain-wrapper {
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-9xs);
-  align-items: flex-start;
-  justify-content: flex-start;
-  color: gray;
-}
-.parent6 {
-  border-radius: var(--br-5xs);
-  border: 2px solid rgba(255, 255, 255, 0.15);
-  display: flex;
-  flex-direction: row;
-  padding: 12px;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 10px;
-  font-size: 16px;
-}
-.div6 {
+  justify-content: flex-end;
+  right: 30px;
   position: relative;
-  text-decoration: line-through;
+}
+li.nav-item {
   display: flex;
   align-items: center;
-  width: 49px;
-  height: 25px;
-  flex-shrink: 0;
-  color: gray;
 }
-.yr6 {
-  position: relative;
-  font-size: var(--font-size-xl);
-  color: var(--shades-white);
-}
-.farmsi-group {
-  width: 1101px;
-  text-align: center;
-
-}
-.farmsi-parent {
-  margin: 0 auto;
-}
-.field {
-  border: 0;
-  font-family: var(--font-helvetica-neue);
-  font-size: 24px;
-  background-color: var(--shades-white);
-  border-radius: var(--br-5xs) 0 0 var(--br-5xs);
-  width: 595px;
-  flex-shrink: 0;
-  overflow: hidden;
-  flex-direction: row;
-  padding: var(--padding-5xl) 20px;
-  box-sizing: border-box;
-  align-items: center;
-}
-.field6-1 {
-  border: 0;
-  font-family: var(--font-helvetica-neue);
-  font-size: 24px;
-  background-color: var(--shades-white);
-  border-radius: var(--br-5xs) 0 0 var(--br-5xs);
-  width: 600px;
-  flex-shrink: 0;
-  overflow: hidden;
-  flex-direction: row;
-  padding: 25.5px 20px;;
-  box-sizing: border-box;
-  align-items: center;
-}
-
-
-
-section.frami-parent {
-  width: 1920px;
-    height: 380px;
-    align-items: center;
-    display: flex;
-    background-color: #EEF2F5;
-}
-.frami-group {
+a.nav-link {
   display: flex;
-  width: 1720px;
-  margin: 0 auto;
-}
-.frame-div {
- width: 430px;
-  text-align: center;
-  padding: 20px 40px;
-}
-.frame-div:hover {
-background-color: #BFDEF0
-;
-}
-.frame-div b {
-font-size: 28px;
-line-height: 29px;
-}
-.frame-div p {
-  font-size: 20px;
-  line-height: 35px;
-  color:rgba(18, 44, 75, 0.75);
-  }
-.pay-an-parent {
-  margin-top: 10px;
-}
-
-
-
-.button6 {
-  border-radius: 0px var(--br-5xs) var(--br-5xs) 0px;
-  background-color: #0AA872;
-  width: 175px;
-  height: 80px;
-  font-size: 24px;
-  line-height: 24px;
-  flex-shrink: 0;
-  overflow: hidden;
-  flex-direction: row;
-  padding: var(--padding-5xl) 16px;
-  box-sizing: border-box;
   align-items: center;
-  justify-content: center;
-  border: none;
-  cursor: pointer;
-  transition: 0.3s;
-  position: relative;
-  display: block;
-  color: white;
 }
-
-@keyframes button-anim {
-  from {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.button6.loading {
-  color: transparent;
-}
-
-.button6.loading::after {
-  opacity: 1;
-}
-
-.button6::after {
-  content: '';
-  display: block;
-  width: 1.2em;
-  height: 1.2em;
-  position: absolute;
-  left: calc(50% - 0.75em);
-  top: calc(50% - 0.75em);
-  border: 0.15em solid transparent;
-  border-right-color: white;
-  border-radius: 50%;
-  animation: button-anim 0.7s linear infinite;
-  opacity: 0;
-}
-.button6.loading::after {
-  opacity: 1;
-}
-input.field6-1 {
-  outline: transparent;
-}
-
-
-
-/* footer section */
-
-section.footer {
-  padding: 50px;
-  width: 1920px;
-  text-align: left;
-  display: flex;
-  background-color: #122C4B;
-  color: #fff;
-}
-section.footer a {
-  color: #fff;
-}
-.sub-parent6 {
-  display: flex;
-  gap: 10px;
-  padding: 20px 0;
-}
-img.wc-brandmark {
-  width: 305px;
-  height: 316px ;
-}
-
-.sub-parent {
-  font-size: 20px;
-  line-height: 20px;
-  width: 400px;
-
-}
-
-.sub-frame {
-  font-size: 20px;
-  line-height: 20px;
-  width: 400px;
-
-}
-
-.footer b.sub-webcentral {
-  font-size: 24px;
-  line-height: 28px;
- font-size: 20px;
-
-}
-
-.sub-parent4 {
-  font-size: 20px;
-  line-height: 20px;
-  width: 400px;
-
-}
-.wc-brandmark-parent {
-  width: 400px;
-}
-.sub-group {
-  padding: 20px 0;
-}
-.sub-group .about-us {
-  padding: 5px 0;
-  line-height: 30px;
-}
-
-
-.sub-button {
-  background-color: rgb(10, 168, 114);
-  width: 130px;
-  padding: 20px;
-  border-radius: 10px;
-  text-align: center;
-  DISPLAY: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-
-
-
-
-
-
-
-
-
